--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "sanity"
   ],
   "dependencies": {
+    "@sanity/orderable-document-list": "^1.4.0",
     "@sanity/vision": "^4.19.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
